[package]
name = "proxy-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["tracing", "tokio"] }
axum-reverse-proxy = "1.0.3"
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
http = "1.3.1"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full", "tokio-macros", "tracing"] }
toml = "0.9.8"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
